Updates to allow downloads to be avoided and DB to be configured for mssql