@@ -1,41 +1,72 @@
 #!/bin/bash
 ########################################################################
-# Basic installer for all the known UV components.
-
+# Basic installer for all the known UV components (assuming a centos 6.5
+# system). 
+#
+# Environment variables which can be set are:
+#
+#   DOWNLOAD_ALLOWED ("yes", "no")
+#
+#   DB_CONNECTION ("mysql","mssql")
+#
 set -x
 
 INSTALLDIR=`pwd`
 
 ########################################################################
-# Passwords used throughout the system (change when needed)
+# Environment variables which have basic defaults.
 
-UV_DATABASE_SQL_USER=root
-UV_DATABASE_SQL_PASSWORD=root
-MASTER_USER=master
-MASTER_PASSWORD=commander
+: ${DOWNLOAD_ALLOWED:="yes"}
+: ${DB_CONNECTION:="mysql"}
+: ${MAVEN_OPTS:="-Xms256m -Xmx1024m -XX:PermSize=256m"}
+
+  ######################################################################
+  # Account details used throughout the system (change when needed)
+
+: ${UV_DATABASE_SQL_USER:=root}
+: ${UV_DATABASE_SQL_PASSWORD:=root}
+: ${MASTER_USER:=master}
+: ${MASTER_PASSWORD:=commander}
+
+  ######################################################################
+
+export DOWNLOAD_ALLOWED DB_CONNECTION MAVEN_OPTS
 
 ########################################################################
 # Assume connected to the Internet and that files can be 
 # downloaded as needed. 
 
-DOWNLOAD_ALLOWED=no
+MAVEN_REPO_LOCAL=${INSTALLDIR}/downloads/repository
+MAVEN_OFFLINE=
+if [ "${DOWNLOAD_ALLOWED}" = "no" ] ; then
+    MAVEN_OFFLINE="-o"
+fi
 
 ########################################################################
 
-UV_VERSION=2.1.0
-UV_PLUGINS_VERSION=2.1.0
+UV_VERSION=2.3.0
+UV_PLUGINS_VERSION=2.2.1
 
 ########################################################################
 
 JAVA_VERSION=1.7.0
 MAVEN_VERSION=3.3.9
-TOMCAT_VERSION=7.0.65
+TOMCAT_VERSION=7.0.67
 
 ########################################################################
 
 MUSERNAME=$1
 MPASSWORD=$2
 MSERVER=smtp.gmail.com
+
+########################################################################
+
+check_installed() {
+    if ! hash $1 2>/dev/null; then
+	echo "ERROR: $1 is not installed"
+	exit -1;
+    fi
+}
 
 ########################################################################
 # Download function which will using the -N option make sure that the
@@ -45,7 +76,11 @@ wget_n() {
     mkdir -p ${INSTALLDIR}/downloads
     pushd ${INSTALLDIR}/downloads
       # Reduce the number of attempts since it will be used off-line
-      wget -N -t 2 $1
+      if ! wget -N -t 2 $1 ;
+      then
+	  echo "*** Error: failed to download - $1"
+	  exit -1;
+      fi
     popd
 }
 
@@ -73,12 +108,27 @@ install_webbrowser() {
 ########################################################################
 
 install_java() {
-    if [ ! -d "/usr/lib/jvm/java-${JAVA_VERSION}-openjdk.x86_64" ]
+    if [ -f "downloads/jdk-7u80-linux-x64.rpm" ]
     then
+	rpm -Uvh downloads/jdk-7u80-linux-x64.rpm
+	echo "export JAVA_HOME=/usr/java/jdk1.7.0_80/jre" >> /etc/environment
+	echo "export JRE_HOME=/usr/java/jdk1.7.0_80/jre" >> /etc/environment	
+    elif [ -d "/usr/lib/jvm/java-${JAVA_VERSION}-openjdk.x86_64" ]
+    then
+	echo "*** INFO: java version installed okay"
+    else
 	# Assume an update will be required.
 	yum -y install java-${JAVA_VERSION}-openjdk-devel
 	# Add to path setting
 	echo "export JAVA_HOME=\"/usr/lib/jvm/java-${JAVA_VERSION}-openjdk.x86_64\"" >> ${HOME}/.bashrc
+	echo "export JRE_HOME=\"/usr/lib/jvm/java-${JAVA_VERSION}-openjdk.x86_64\"" >> ${HOME}/.bashrc	
+	echo "export JAVA_HOME=/usr/lib/jvm/java-${JAVA_VERSION}-openjdk.x86_64" >> /etc/environment
+	echo "export JRE_HOME=/usr/lib/jvm/java-${JAVA_VERSION}-openjdk.x86_64" >> /etc/environment	
+        if  [ ! -d "/usr/lib/jvm/java-${JAVA_VERSION}-openjdk.x86_64" ]
+	then
+	    echo "*** ERROR: failed to setup Java - download from Oracle"
+	    exit -1;
+	fi
     fi
 }
 
@@ -97,8 +147,9 @@ install_maven3() {
 	  cp -r apache-maven-${MAVEN_VERSION} /opt
 	  # Add to path setting
 	  echo "export PATH=\"/opt/apache-maven-${MAVEN_VERSION}/bin:$PATH\"" >> ${HOME}/.bashrc
-	popd
+        popd
     fi
+    echo "/opt/apache-maven-${MAVEN_VERSION}/bin"
 }
 
 ########################################################################
@@ -139,60 +190,199 @@ install_mysql() {
 
 download_uv() {
     pushd ${INSTALLDIR}/downloads
+       wget_n https://github.com/UnifiedViews/Core/archive/release/UV_Core_v2.3.0.zip
+       wget_n https://github.com/UnifiedViews/Plugins/archive/release/UV_Plugins_v2.2.1.zip
+       wget_n https://github.com/UnifiedViews/Plugin-DevEnv/archive/master.zip
+       if [ ! -d "Core-release-UV_Core_v2.3.0" ]
+       then
+	   unzip -o UV_Core_*.zip
+	   # otherwise the .scss file is looked for which isn't present
+	   touch Core-release-UV_Core_v2.3.0/frontend/src/main/webapp/VAADIN/themes/ModTheme/styles.css
+	   # Replace the updated files
+	   # Update to "FOR UPDATE"
+	   cp downloads/updated-java/DbScheduleImpl.java Core-release-UV_Core_v2.3.0/commons-app/src/main/java/cz/cuni/mff/xrg/odcs/commons/app/scheduling/DbScheduleImpl.java
+
+	   cp downloads/updated-java/DbExecutionServerImpl.java Core-release-UV_Core_v2.3.0/commons-app/src/main/java/cz/cuni/mff/xrg/odcs/commons/app/execution/server/DbExecutionServerImpl.java
+
+	   cp downloads/updated-java/ExecutionServer.java Core-release-UV_Core_v2.3.0/commons-app/src/main/java/cz/cuni/mff/xrg/odcs/commons/app/execution/server/ExecutionServer.java
+
+	   unzip -o UV_Plugins*.zip
+	   unzip -o master*.zip
+       else
+	   echo "*** Info: has all been unpacked previously"
+       fi
+       
        # Use to docker jar, war, etc.
        git clone https://github.com/tenforce/docker-unified-views
        # Missed Jars
-       wget_n http://central.maven.org/maven2/com/jcraft/jsch/0.1.53/jsch-0.1.49.jar
-       # DB schema
-       wget_n https://raw.githubusercontent.com/UnifiedViews/Core/UV_Core_v${UV_PLUGINS_VERSION}/db/mysql/schema.sql
-       wget_n https://raw.githubusercontent.com/UnifiedViews/Core/UV_Core_v${UV_PLUGINS_VERSION}/db/mysql/data-core.sql
-       wget_n https://raw.githubusercontent.com/UnifiedViews/Core/UV_Core_v${UV_PLUGINS_VERSION}/db/mysql/data-permissions.sql
-       wget_n https://dl.dropboxusercontent.com/u/7519106/dpus.zip
-       wget_n https://dl.dropboxusercontent.com/u/7519106/dpu-lib.zip
+       wget_n http://central.maven.org/maven2/com/jcraft/jsch/0.1.49/jsch-0.1.49.jar
+       
+       if [ "${DB_CONNECTION}" = "mysql" -a "${UV_VERSION}" = "2.1.0" ] ;
+       then
+	  # 2.3.0 version doesn't need this since backend does it.
+	  # DB schema
+	  wget_n https://raw.githubusercontent.com/UnifiedViews/Core/UV_Core_v${UV_PLUGINS_VERSION}/db/mysql/schema.sql
+	  wget_n https://raw.githubusercontent.com/UnifiedViews/Core/UV_Core_v${UV_PLUGINS_VERSION}/db/mysql/data-core.sql
+	  wget_n https://raw.githubusercontent.com/UnifiedViews/Core/UV_Core_v${UV_PLUGINS_VERSION}/db/mysql/data-permissions.sql
+	  wget_n https://dl.dropboxusercontent.com/u/7519106/dpus.zip
+	  wget_n https://dl.dropboxusercontent.com/u/7519106/dpu-lib.zip
+       fi
     popd
 }
 
 #################################################################
-# Note: as far as possible, put everything in standard Linux 
-# locations for the sys-admin. 
+# save everything which might be needed for building UV offline.
 
-build_uv_plugins() {
+save_uv_downloads() {
+    pushd ${INSTALLDIR}/downloads
+    if [ -d "Core-release-UV_Core_v2.3.0" ]
+    then
+	# Only do this at present for the 2.3.0 version of unified views
+	for i in Plugin-DevEnv-master Core-release-UV_Core_v2.3.0 Plugins-release-UV_Plugins_v2.2.1
+	do
+            pushd $i
+   	     mvn dependency:go-offline -Dmaven.repo.local=${MAVEN_REPO_LOCAL}
+	    popd
+	done
+    fi
+    popd
+}
+    
+#################################################################
+# Note: as far as possible, put everything in standard Linux 
+# locations for the sake of the sys-admin. 
+
+install_oracle_jar() {
     pushd ${INSTALLDIR}/downloads
       # The OJDBC7.JAR has to be manually downloaded from oracle site (sorry)
-      mvn install:install-file -Dfile=/vagrant/downloads/ojdbc7.jar \
+      # DPU required parts downloaded, unpack where needed.
+      mvn -Dmaven.repo.local=${MAVEN_REPO_LOCAL} ${MAVEN_OFFLINE} \
+          install:install-file -Dfile=${INSTALLDIR}/downloads/ojdbc7.jar \
 	  -DgroupId=com.oracle -DartifactId=ojdbc7 -Dversion=12.1.0.2.0 \
 	  -Dpackaging=jar
-
-      # DPU required parts downloaded, unpack where needed.
-      mkdir -p dpus
-      pushd dpus
-        unzip ../dpus.zip
-      popd
-      mkdir -p dpu-lib
-      pushd dpu-lib
-        unzip ../dpu-lib.zip
-      popd
-	
-      # Now copy the jars to where they are supposed to be before installing
-      mkdir -p /usr/local/unifiedviews/dpus
-      cp dpus/*.jar /usr/local/unifiedviews/dpus
-
-      # Update libraries where needed.
-      cp dpu-lib/*.jar /usr/local/tomcat7/lib
-      cp jsch-0.1.49.jar /usr/local/tomcat7/lib 
-      cp dpu-lib/*.jar /usr/local/unifiedviews/lib
-      cp jsch-0.1.49.jar /usr/local/unifiedviews/lib 
     popd
 }
 
-##############################################################################
+# Add the extra jdbc driver jar (pom for the backend also updated).
 
-create_mysql_tables() {
-    echo "create_mysql_tables"
-    echo "create database unifiedviews; use unifiedviews" | mysql -u root -proot
-    mysql -u root -proot unifiedviews < ${INSTALLDIR}/downloads/schema.sql
-    mysql -u root -proot unifiedviews < ${INSTALLDIR}/downloads/data-core.sql
-    mysql -u root -proot unifiedviews < ${INSTALLDIR}/downloads/data-permissions.sql
+install_mssqlserver_jar() {
+    pushd ${INSTALLDIR}/downloads
+      # The sql*.tar,gz has to be manually downloaded from the ms site
+      if [ "${DB_CONNECTION}" = "mssql" ]
+      then
+	  mkdir packages/lib
+	  if [ ! -f "sqljdbc_6.0.6629.101_enu.tar.gz" ]
+	  then
+	      echo "*** ERROR: sqljdbc_6.0.6629.101_enu.tar.gz needs to be downloaded"
+	      exit -1;
+	  fi
+	  tar xvf sqljdbc_6.0.6629.101_enu.tar.gz
+	  cp sqljdbc_6.0/enu/sqljdbc41.jar packages/lib
+	  # YUK (would be much better elsewhere)
+	  cp sqljdbc_6.0/enu/sqljdbc41.jar /usr/local/tomcat7/lib
+	  chown tomcat7.tomcat7 /usr/local/tomcat7/lib/sqljdbc41.jar
+	  # Also make available for any build operations
+	  mvn -Dmaven.repo.local=${MAVEN_REPO_LOCAL} ${MAVEN_OFFLINE} \
+              install:install-file -Dfile=${INSTALLDIR}/downloads/sqljdbc_6.0/enu/sqljdbc41.jar \
+	      -DgroupId=com.microsoft.sqlserver -DartifactId=sqljdbc41 -Dversion=4.1 \
+	      -Dpackaging=jar
+	  # Overwrite the backend pom so that it contains the ms driver jar
+	  cp ${INSTALLDIR}/config-files/backend-pom.xml Core*/backend/pom.xml
+      else
+	  echo "*** INFO: mssql driver noy installed"
+      fi
+    popd
+}
+
+build_uv_plugins() {
+    pushd ${INSTALLDIR}/downloads
+      # Now copy the jars to where they are supposed to be before installing
+      if [ "${UV_PLUGINS_VERSION}" = "2.1.0" ]
+      then
+	  echo "*** INFO: taking plugins from docker view"
+      else
+	  pushd Plugin-DevEnv-master
+            mvn -Dmaven.repo.local=${MAVEN_REPO_LOCAL} ${MAVEN_OFFLINE} clean install
+	  popd
+	  pushd Plugins-release-UV_Plugins_v2.2.1
+            mvn -DskipTests -Dmaven.repo.local=${MAVEN_REPO_LOCAL} ${MAVEN_OFFLINE} clean install
+	  popd
+      fi
+    popd
+}
+
+build_uv_core() {
+    pushd ${INSTALLDIR}/downloads    
+     pushd *Core*
+       mvn -Dmaven.repo.local=${MAVEN_REPO_LOCAL} ${MAVEN_OFFLINE} clean install
+     popd
+    
+     mkdir -p packages/lib
+     cp Core*/backend/target/*.jar packages
+     cp -r Core*/backend/target/lib packages
+     cp Core*/frontend/target/*.war packages
+     cp Core*/master/target/*.war packages
+     # any extras needed
+     cp -r Core*/target/lib packages
+    popd
+}
+
+copy_uv_plugins() {
+    pushd ${INSTALLDIR}/downloads
+      # Now copy the plugin jars to where they are supposed to be before installing
+      mkdir -p /usr/local/unifiedviews/dpus
+      mkdir -p /usr/local/unifiedviews/lib
+      mkdir -p /usr/local/tomcat7/lib
+      cp jsch-0.1.*.jar /usr/local/unifiedviews/lib
+      cp jsch-0.1.*.jar /usr/local/tomcat7/lib	    
+      if [ "${UV_PLUGINS_VERSION}" = "2.1.0" ]
+      then
+	  cp dpus/*.jar /usr/local/unifiedviews/dpus
+	  # Update libraries where needed.
+	  cp dpu-lib/*.jar /usr/local/tomcat7/lib
+	  cp jsch-0.1.49.jar /usr/local/tomcat7/lib 
+	  cp jsch-0.1.49.jar /usr/local/unifiedviews/lib
+	  cp dpu-lib/*.jar /usr/local/unifiedviews/lib
+      else
+	  echo "*** INFO: Copying dpu's etc"
+	  cp Plugins-release-UV_Plugins_v2.2.1/*/target/*.jar /usr/local/unifiedviews/dpus
+      fi
+    popd
+}
+
+#############################################################################
+# Test files are where they should be (not that it works)
+check_uv_installation() {
+    FILES=/usr/local/tomcat7/webapps/unifiedviews.war \
+	  /usr/local/tomcat7/webapps/master.war
+    for f in ${FILES}
+    do
+	if ! -f ${f}
+	then
+	    echo "$f not found"
+	    exit -1 ;
+	fi
+    done
+}
+
+##############################################################################
+# Creation of the DB tables, etc. 
+create_dbtables() {
+    if [ "${DB_CONNECTION}" = "mysql" ]
+    then
+	echo "*** INFO - create mysql database needed"
+	echo "create database unifiedviews; use unifiedviews" | mysql -u root -proot
+	if [ "${UV_PLUGINS_VERSION}" = "2.1.0" ]
+	then
+	    mysql -u root -proot unifiedviews < ${INSTALLDIR}/downloads/schema.sql
+	    mysql -u root -proot unifiedviews < ${INSTALLDIR}/downloads/data-core.sql
+	    mysql -u root -proot unifiedviews < ${INSTALLDIR}/downloads/data-permissions.sql
+	else
+	    echo "*** INFO - db schema will be created by backend"
+	fi
+    else
+	echo "*** INFO: tables not created yet - only for mysql/2.1.0"
+    fi
 }
 
 ###############################################################################
@@ -215,9 +405,14 @@ create_uv_service() {
 
 ###############################################################################
 
+build_uv_parts() {
+    build_uv_core
+    build_uv_plugins
+}
+
 install_uv() {
-    source ~/.bashrc
-    if [ ! -d "/usr/local/unifiedviews" ]
+    echo "**** INFO: install core part of system"
+    if [ ! -d "/usr/local/unifiedviews/backend/working" ]
     then
 	# Directories to dump everything
 	mkdir -p /usr/local/unifiedviews
@@ -227,14 +422,18 @@ install_uv() {
 	mkdir -p /usr/local/unifiedviews/config
 	mkdir -p /usr/local/unifiedviews/lib
 	mkdir -p /usr/local/unifiedviews/backend/working
-	 
-	build_uv_plugins
-	# Create the necessary tables
-	create_mysql_tables
+
+	create_dbtables
 	
 	pushd /usr/local/unifiedviews
          touch logs/frontend.log logs/frontend_err.log
-	 cp -r ${INSTALLDIR}/downloads/docker-unified-views/packages .
+	 if [ ! -d "${INSTALLDIR}/downloads/packages"  ] ; then
+	     cp -r ${INSTALLDIR}/downloads/docker-unified-views/packages .
+	     cp -r ${INSTALLDIR}/downloads/docker-unified-views/packages/lib /usr/local/unifiedviews
+	 else
+	     cp -r ${INSTALLDIR}/downloads/packages .
+	     cp -r ${INSTALLDIR}/downloads/packages/lib /usr/local/unifiedviews
+	 fi
 	 if [ "$MUSERNAME" != "" ] ; then
 	    cp ${INSTALLDIR}/config-files/email-config.properties ${INSTALLDIR}/config-files/email-config.properties.new
 	    sed -i "s/%MAIL_PASSWORD%/$MPASSWORD/g" ${INSTALLDIR}/config-files/email-config.properties.new
@@ -242,20 +441,19 @@ install_uv() {
 	 else
 	     cp ${INSTALLDIR}/config-files/email-config.properties.default ${INSTALLDIR}/config-files/email-config.properties.new
 	 fi
-	 cat ${INSTALLDIR}/config-files/backend-config.properties ${INSTALLDIR}/config-files/email-config.properties.new > config/backend-config.properties
-	 cat ${INSTALLDIR}/config-files/frontend-config.properties ${INSTALLDIR}/config-files/email-config.properties.new > config/frontend-config.properties
+	 cat ${INSTALLDIR}/config-files/backend-config.${DB_CONNECTION}.properties ${INSTALLDIR}/config-files/email-config.properties.new > config/backend-config.properties
+	 cat ${INSTALLDIR}/config-files/frontend-config.${DB_CONNECTION}.properties ${INSTALLDIR}/config-files/email-config.properties.new > config/frontend-config.properties
 	 rm -f ${INSTALLDIR}/config-files/email-config.properties.new
 	 cp ${INSTALLDIR}/config-files/startup.sh .
 	 cp ${INSTALLDIR}/config-files/add-dpu.sh .
 	 cp ${INSTALLDIR}/config-files/env-to-java-properties-file.sh .
-	 cp -r ${INSTALLDIR}/downloads/docker-unified-views/packages/lib /usr/local/unifiedviews
          create_uv_service;
 	 echo "Starting Service"
 	 chmod +x /usr/local/unifiedviews/startup.sh
 	 /usr/local/unifiedviews/startup.sh
-         popd
+        popd
     else
-	 echo "UV - Already setup"
+	echo "UV - Already setup"
     fi
 }
 
@@ -294,13 +492,28 @@ smtp_use_tls = yes" >> /etc/postfix/main.cf
 
 if [ "$DOWNLOAD_ALLOWED" = "yes" ]
 then
+    # Normally, this list should contain all the downloads necessary when
+    # installing off-line. However, there are some problems when it comes
+    # to compiling with Maven (which will also download what is required).
+    #
+    # The assumption is that the base box has been created, which is very
+    # close to the target machine (everything can then be moved to the
+    # remote machine when needed for building).
+    #
     download_tomcat7;
     download_maven3;
-    download_uv
+    download_uv;
 fi
 
-if [ ! -f "downloads/ojdbc7.jar" ] ; then
+if [ ! -f "downloads/ojdbc7.jar" ]
+then
     echo "Error: ojdbc7.jar must be downloaded from Oracle website"
+    exit -1;
+fi
+
+if [ ! -f "downloads/sqljdbc_6.0.6629.101_enu.tar.gz" ]
+then
+    echo "Error: sqljdbc_6.0.6629.101_enu.tar.gz must be downloaded from microsoft website"
     exit -1;
 fi
 
@@ -314,12 +527,40 @@ install_default;            # Main component installs
 install_webbrowser;
 install_editor;
 install_java;
-install_maven3;
-install_tomcat7;
-install_mysql;
+install_maven3
+install_tomcat7
+
+# MVN/JAVA/etc. should be accessible from this point on.
+source ~/.bashrc
+
+if [ "${DB_CONNECTION}" = "mysql" ] ; then
+    install_mysql
+fi
+
+# last checks that some commands are installed
+check_installed mvn
+check_installed java
+check_installed git
+
+# Install some jdbc drivers
+
+install_oracle_jar
+install_mssqlserver_jar
+
+# Start to build, configure, etc. unifiedviews
+
 install_mail;
 config_mail;
-install_uv                  # Anything to do with Unified-Views
+build_uv_parts;
+copy_uv_plugins;
+install_uv;
+
+# It should all be installed, so final checks
+check_uv_installation;
+if [ "${DOWNLOADING}" = "yes" ]
+then
+    save_uv_downloads
+fi
 
 ###############################################################################
 exit 0;
